--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,8 +11,17 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  
+  margin-bottom: 32px;
 }
-
+.items {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+.chilli, .saffron, .pepper, .barberry{
+  max-width: 200px;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
