--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -9,6 +9,9 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  gap: 15px 15px;
+  grid-template: 500px 500px 2500px 500px/ 500px 1500px;
 }
 
 .container div {
@@ -18,14 +21,18 @@ html {
   font-weight: bold;
   color: white;
   border-radius: 15px;
+  
 }
 
 .header {
   background-color: #006157;
+  grid-column: 1/-1;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column-start: 1;
+  grid-row: 2 / 4;
 }
 
 .nav {
@@ -38,6 +45,7 @@ html {
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/-1;
 }
 
 .article p {
